--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
@@ -129,7 +129,7 @@
                                        {
                                            settings.Name = "cliente.Locacion.IdPais";
                                            settings.Width = 180;
-                                           settings.SelectedIndex = Model.cliente.Locacion.IdPais;
+                                           settings.SelectedIndex = 1;
                                            settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                            settings.Theme = "Material";
@@ -159,7 +159,7 @@
                                        {
                                            settings.Name = "cliente.Locacion.IdEstadoRep";
                                            settings.Width = 180;
-                                           settings.SelectedIndex = Model.cliente.Locacion.IdEstadoRep;
+                                           settings.SelectedIndex = 12;
                                            settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                            settings.Theme = "Material";
