--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_DatosCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_DatosCliente.cshtml
@@ -12,6 +12,7 @@
     settings.Properties.Columns.Add("Nombre", "Nombre", 130);
     settings.Properties.Columns.Add("Apellido1", "Apellido", 130);
     settings.Properties.Columns.Add("Rfc", "RFC", 230);
+    settings.Properties.Columns.Add("Telefono", "Telefono");
 }).GetHtml()
 @*@Html.DevExpress().ComboBox(settings =>
 {
