--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_Pedidos.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_Pedidos.cshtml
@@ -28,7 +28,7 @@
             c.Caption = "ID";
             c.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
-        settings.Columns.Add("cliente.Telefono", "Tel.");
+        settings.Columns.Add("Telefono", "Tel.");
         settings.Columns.Add("NombreRfc", "Solicitante");
         settings.Columns.Add("Cantidad", "Cantidad");
         settings.Columns.Add("EstatusPedido", "Estatus");
