--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
                                     <ul>
                                         <li>
                                             <div class="demo-google-material-icon">
-                                                <a href="http://sagasapi.ddns.net:7013/SAGAS_APK/app-sagas-release.apk">
+                                                <a href="http://192.168.0.13:7013/SAGAS_APK/app-sagas-release.apk">
                                                     <i class="material-icons">android</i> <span class="icon-name">App móvil (v1.0.20190703)</span>
                                                 </a>
                                             </div>
