--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -299,10 +299,10 @@
                                     @if (rol.CatCombustibles)
                                     {
                                     <li>@Html.ActionLink("Combustibles", "Index", "Combustible")</li>}
-                                    @if (rol.CatPuntosVenta)
+                                    @*@if (rol.CatPuntosVenta)
                                     {
-                                    @*<li>@Html.ActionLink("Puntos de venta", "Index", "PuntoVenta")</li>*@
-                                    }
+                                    <li>@Html.ActionLink("Puntos de venta", "Index", "PuntoVenta")</li>
+                                    }*@
                                     @if (rol.CatPrecioVenta)
                                     {
                                     <li>@Html.ActionLink("Precio de venta", "Index", "PrecioVenta")</li>}
