JSA - Correciones Call Center

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
@@ -215,7 +215,7 @@
                                                             settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                             settings.Properties.TextFormatString = "{0}";
                                                             settings.Properties.ValueType = typeof(int);
-                                                            settings.Properties.Columns.Add("Calle", "Calle", 150);
+                                                            settings.Properties.Columns.Add("Calle", "Calle", 300);
                                                             settings.Properties.Columns.Add("NumExt", "NumExt", 100);
                                                             settings.Properties.Columns.Add("Colonia", "Colonia", 150);
                                                             settings.Properties.Columns.Add("formatted_address", "Referencia", 300);
@@ -279,7 +279,7 @@
                                                 </div>
                                                 <div class="col-sm-1" style="top: 22px;">
                                                     <div class="form-group">
-                                                        kg.
+                                                        Lts.
                                                     </div>
                                                 </div>
                                             </div>
