--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/RevisarPedido.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/RevisarPedido.cshtml
@@ -175,7 +175,7 @@
                                         <div class="row clearfix">
                                             <div class="col-sm-4">
                                                 <div class="form-group">
-                                                    <input type="submit" value="Editar datos del cliente" formmethod="post" disabled class="btn btn-raised btn-primary btn-round float-left" />
+                                                    <input type="submit" value="Editar dirección del cliente" formmethod="post" disabled class="btn btn-raised btn-primary btn-round float-left" />
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
@@ -192,7 +192,7 @@
                                         <div class="row clearfix">
                                             <div class="col-sm-4">
                                                 <div class="form-group">
-                                                    <input type="submit" value="Editar datos del cliente" formaction=@Url.Action("AltaClienteDireccion") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
+                                                    <input type="submit" value="Editar dirección del cliente " formaction=@Url.Action("AltaClienteDireccion") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
